--- a/API/package.json
+++ b/API/package.json
@@ -16,7 +16,8 @@
     "fp-error-handling": "0.0.7",
     "hapi": "^17.8.1",
     "lowdb": "^1.0.0",
-    "pm2": "^3.2.7"
+    "pm2": "^3.2.7",
+    "ramda": "^0.26.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
