--- a/API/package.json
+++ b/API/package.json
@@ -13,8 +13,14 @@
     "node": "v10.15.0"
   },
   "dependencies": {
+    "bcrypt": "^3.0.3",
+    "boom": "^7.3.0",
     "fp-error-handling": "0.0.7",
+    "glob": "^7.1.3",
     "hapi": "^17.8.1",
+    "hapi-auth-jwt": "^4.0.0",
+    "hapi-auth-jwt2": "^8.3.0",
+    "joi": "^14.3.1",
     "lowdb": "^1.0.0",
     "pm2": "^3.2.7",
     "ramda": "^0.26.1"
