--- a/API/package.json
+++ b/API/package.json
@@ -21,6 +21,7 @@
     "hapi-auth-jwt": "^4.0.0",
     "hapi-auth-jwt2": "^8.3.0",
     "joi": "^14.3.1",
+    "jsonwebtoken": "^8.4.0",
     "lowdb": "^1.0.0",
     "pm2": "^3.2.7",
     "ramda": "^0.26.1"
