--- a/API/package.json
+++ b/API/package.json
@@ -1,6 +1,7 @@
 {
   "name": "demeter-api",
   "version": "0.0.1",
+  "privateKey": "NeverShareYourSecret",
   "description": "Hapi.js API server",
   "main": "index.js",
   "scripts": {
@@ -20,11 +21,14 @@
     "hapi": "^17.8.1",
     "hapi-auth-jwt": "^4.0.0",
     "hapi-auth-jwt2": "^8.3.0",
+    "hapi-swagger": "^9.3.0",
+    "inert": "^5.1.2",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.4.0",
     "lowdb": "^1.0.0",
     "pm2": "^3.2.7",
-    "ramda": "^0.26.1"
+    "ramda": "^0.26.1",
+    "vision": "^5.4.4"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
