--- a/API/package.json
+++ b/API/package.json
@@ -6,6 +6,7 @@
   "main": "index.js",
   "scripts": {
     "start": "pm2 start ecosystem.config.js",
+    "stop": "pm2 kill",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Marco Patierno",
